# ResisTrack_backend

./: readme.md
backend/: .gitignore  README.md  genome_firewall_models.pkl  pyproject.toml
backend/app/: __init__.py  amrfinder.py  config.py  main.py  models.py  ncbi.py  phylogeny.py  predict.py
backend/phylotree/: NOTE.md  README.md  config.yaml  requirements.txt
backend/phylotree/outputs/: amr_detections_long.csv  amr_gene_matrix.csv  clade_assignments.csv  labeled_master_table.csv  master_feature_table.csv  tree.nwk
backend/phylotree/src/: amr_annotate.py  build_labels.py  build_tree.py  bvbrc_client.py  cut_clades.py  distance_matrix.py  download_genomes.py  join_tracks.py  parse_amr_matrix.py  pipeline.py  sketch_genomes.py  sweep_thresholds.py
backend/tests/: test_amrfinder.py  test_api.py  test_ncbi.py  test_phylogeny.py  test_predict.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/dashboard/: analysis-status-panel.tsx  cohort-list.tsx  dashboard-header.tsx  fasta-upload-panel.tsx  ncbi-genome-search.tsx  recent-analyses-empty.tsx
frontend/src/components/layout/: app-header.tsx  app-sidebar.tsx
frontend/src/lib/: api.ts  format.ts  genome-fasta.ts  genome-label.ts  mock-data.ts  phylogeny-layout.ts  phylogeny-params.ts
frontend/src/pages/: analyze-page.tsx  dashboard-page.tsx  library-page.tsx  phylogeny-page.tsx  predict-page.tsx  report-page.tsx
frontend/src/types/: analysis.ts  genome.ts  navigation.ts  phylogeny.ts  prediction.ts  workflow.ts
(+3 files in other folders)
