[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "resistrace-api"
version = "0.1.0"
description = "Resistrace genome search API"
requires-python = ">=3.12"
dependencies = [
  "biopython",
  "fastapi",
  "httpx",
  "joblib",
  "numpy",
  "pyrodigal",
  "scikit-learn==1.6.1",
  "scipy",
  "sourmash",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
